# CKAN

./: .travis.yml  MANIFEST.in  README.rst  setup.cfg  setup.py
ckanext/: __init__.py
ckanext/dategovmd_theme/: blueprint.py  data-production.ini  plugin.py  utils.py
ckanext/dategovmd_theme/fanstatic/: html-render-script.js
ckanext/dategovmd_theme/i18n/: .ckanext-dategovmd_theme.pot.swp  ckanext-dategovmd_theme.pot
ckanext/dategovmd_theme/i18n/en/LC_MESSAGES/: ckanext-dategovmd_theme.mo  ckanext-dategovmd_theme.po
ckanext/dategovmd_theme/i18n/ro/LC_MESSAGES/: .ckanext-dategovmd_theme.po.swo  .ckanext-dategovmd_theme.po.swp  ckanext-dategovmd_theme.mo  ckanext-dategovmd_theme.po
ckanext/dategovmd_theme/i18n/ru/LC_MESSAGES/: ckanext-dategovmd_theme.mo  ckanext-dategovmd_theme.po
ckanext/dategovmd_theme/public/: dategovmd_theme.css
ckanext/dategovmd_theme/templates/: .header.html.swp  base.html  footer.html  header.html
ckanext/dategovmd_theme/templates/custom/: article.html  articles.html  faq.html
ckanext/dategovmd_theme/templates/custom/snippets/: .faq_item.html.swp  faq_item.html  faq_list.html
ckanext/dategovmd_theme/templates/group/snippets/: helper.html
ckanext/dategovmd_theme/templates/home/: promoted.html
ckanext/dategovmd_theme/templates/home/snippets/: .promoted.html.swp  about_text.html  promoted.html  search.html
ckanext/dategovmd_theme/templates/organization/snippets/: helper.html
ckanext/dategovmd_theme/templates/snippets/: pagination.html  search_form.html
ckanext/dategovmd_theme/tests/: test_plugin.py
