[metadata]
name = ckanext-dategovmd_theme
version = 0.0.1
author = Vasile Mustuc
author_email = mustuc.vasile95@gmail.com
description = A small package for date.gov.md site
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com//ckanext-dategovmd_theme
project_urls =
    Bug Tracker = https://github.com//ckanext-dategovmd_themeissues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[extract_messages]
keywords = translate isPlural
add_comments = TRANSLATORS:
output_file = ckanext/dategovmd_theme/i18n/ckanext-dategovmd_theme.pot
width = 80

[init_catalog]
domain = ckanext-dategovmd_theme
input_file = ckanext/dategovmd_theme/i18n/ckanext-dategovmd_theme.pot
output_dir = ckanext/dategovmd_theme/i18n

[update_catalog]
domain = ckanext-dategovmd_theme
input_file = ckanext/dategovmd_theme/i18n/ckanext-dategovmd_theme.pot
output_dir = ckanext/dategovmd_theme/i18n
previous = true

[compile_catalog]
domain = ckanext-dategovmd_theme
directory = ckanext/dategovmd_theme/i18n
statistics = true